--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="app/scss/style.css">
   
   <title>Frontend Mentor | [Blogr]</title>
 
@@ -15,37 +18,63 @@
   </style>
 </head>
 <body>
-  Product
+  <header>
+    <nav class="nav">
+      <img src="images/logo.svg" alt="logo">
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
+      <div class="menu">
+        <ul class="main-menu">
+            <li>Product</li>
+              <ul class="sub-menu">
+                <li>Overview</li>
+                <li>Pricing</li>
+                <li>Marketplace</li>
+                <li>Features</li>
+                <li>Integrations</li>
+              </ul>
+            <li>Company</li>
+              <ul class="sub-menu">
+                <li>About</li>
+                <li>Team</li>
+                <li>Blog</li>
+                <li>Careers</li>
+              </ul>
+            <li>Connect</li>
+              <ul class="sub-menu">
+                <li>Contact</li>
+                <li>Newsletter</li>
+                <li>LinkedIn</li>
+              </ul>
 
-  Company
+        </ul>
 
-  About
-  Team
-  Blog
-  Careers
+          <div class="accounts">
+            Login
+            Sign Up
+          </div>
 
-  Connect
+      </div>
 
-  Contact
-  Newsletter
-  LinkedIn
-  
-  Login
-  Sign Up
+      <!-- menu button goes here -->
+    </nav>
 
-  A modern publishing platform
-  Grow your audience and build your online brand
+    <h1>
+      A modern publishing platform
+    </h1>
+    
+    <p>
+      Grow your audience and build your online brand
+    </p>
 
-  Start for Free
-  Learn More
+    <div class="buttons">
+      <button>Start for Free</button>
+      <button>Learn More</button>
+    </div>
 
-  Designed for the future
+  </header>
+
+
+  <!-- Designed for the future
 
   Introducing an extensible editor
   Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
@@ -89,11 +118,11 @@
   
   Contact
   Newsletter
-  LinkedIn
+  LinkedIn -->
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
