Add styles for mobile version of header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </style>
 </head>
 <body>
-  <header>
-    <nav class="nav">
-      <img src="images/logo.svg" alt="logo">
+  <header class="header">
+    <nav class="nav flex flex-jc-sb">
+      <img class="logo" src="images/logo.svg" alt="logo">
 
       <div class="menu">
         <ul class="main-menu">
@@ -55,21 +55,25 @@
 
       </div>
 
-      <!-- menu button goes here -->
+      <a href="/"><img src="images/icon-hamburger.svg" alt="navbar menu"></a>
     </nav>
 
-    <h1>
-      A modern publishing platform
-    </h1>
-    
-    <p>
-      Grow your audience and build your online brand
-    </p>
+    <div class="hero">
+      <h1>
+        A modern publishing platform
+      </h1>
+      
+      <p>
+        Grow your audience and build your online brand
+      </p>
 
-    <div class="buttons">
-      <button>Start for Free</button>
-      <button>Learn More</button>
+      <div class="buttons flex flex-jc-sa">
+        <button>Start for Free</button>
+        <button>Learn More</button>
+      </div>
     </div>
+
+
 
   </header>
 
