--- a/index.html
+++ b/index.html
@@ -1,132 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="app/scss/style.css">
-  
-  <title>Frontend Mentor | [Blogr]</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="app/scss/style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<title>Frontend Mentor | [Blogr]</title>
 </head>
 <body>
-  <header class="header">
-    <nav class="nav flex flex-jc-sb">
-      <img class="logo" src="images/logo.svg" alt="logo">
+	<header class="header">
+		<nav class="nav flex flex-jc-sb">
+			<a href="/" class="header__logo">
+				<img src="images/logo.svg" alt="Blogr">
+			</a>
 
-      <div class="menu">
-        <ul class="main-menu">
-            <li>Product</li>
-              <ul class="sub-menu">
-                <li>Overview</li>
-                <li>Pricing</li>
-                <li>Marketplace</li>
-                <li>Features</li>
-                <li>Integrations</li>
-              </ul>
-            <li>Company</li>
-              <ul class="sub-menu">
-                <li>About</li>
-                <li>Team</li>
-                <li>Blog</li>
-                <li>Careers</li>
-              </ul>
-            <li>Connect</li>
-              <ul class="sub-menu">
-                <li>Contact</li>
-                <li>Newsletter</li>
-                <li>LinkedIn</li>
-              </ul>
+			<a href="#" id="btnMenu" class="header__toggle hide-for-desktop">
+				<img id="btnImage" src="images/icon-hamburger.svg" alt="Menu Toggle">
+			</a>
 
-        </ul>
+			<!-- Put the links for desktop here -->
+		</nav>
 
-          <div class="accounts">
-            Login
-            Sign Up
-          </div>
+		<div class="header__menu has-fade">
+			<div class="menu-item">
+				<a href="#" data-menu="product-menu">Product<span><img src="images/icon-arrow-dark.svg" alt="arrow"></span></a>
+				<div id="product-menu" class="header__submenu">
+					<a href="">Overview</a>
+					<a href="">Pricing</a>
+					<a href="">Marketplace</a>
+					<a href="">Features</a>
+					<a href="">Integrations</a>
+				</div>			
+			</div>
 
-      </div>
+			<div class="menu-item">
+				<a href="#" data-menu="company-menu">Company<span><img src="images/icon-arrow-dark.svg" alt="arrow"></span></a>
+				<div id="company-menu" class="header__submenu">
+					<a href="">About</a>
+					<a href="">Team</a>
+					<a href="">Blog</a>
+					<a href="">Careers</a>
+				</div>			
+			</div>
 
-      <a href="/"><img src="images/icon-hamburger.svg" alt="navbar menu"></a>
-    </nav>
+			<div class="menu-item">
+				<a href="#" data-menu="connect-menu">Connect<span><img src="images/icon-arrow-dark.svg" alt="arrow"></span></a>
+				<div id="connect-menu" class="header__submenu">
+					<a href="">Contact</a>
+					<a href="">Newsletter</a>
+					<a href="">LinkedIn</a>
+				</div>			
+			</div>
 
-    <div class="hero">
-      <h1>
-        A modern publishing platform
-      </h1>
-      
-      <p>
-        Grow your audience and build your online brand
-      </p>
+			<hr>
 
-      <div class="buttons flex flex-jc-sa">
-        <button>Start for Free</button>
-        <button>Learn More</button>
-      </div>
-    </div>
+			<div class="menu-item">
+				<a href="#">Login</a>
+			</div>
 
+			<button type="button">Sign Up</button>
 
+		</div>
 
-  </header>
+		<div class="hero">
+			<h1>A modern publishing platform</h1>
+			<p>Grow your audience and build your online brand</p>
 
+			<div class="buttons flex flex-jc-sa">
+				<button type="button">Start for Free</button>
+				<button>Learn More</button>
+			</div>
+		</div>
 
-  <!-- Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn -->
-
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+	</header>
+	
+	<script src="app/js/script.js"></script>
 </body>
 </html>
